# StudyTracker-Backend

./: README.md  draft4.ipynb  flask_app.py  simple_gui.py
agent/: configuration.py  graph.py  state.py  utils.py
archive/: draft2.ipynb  draft3.ipynb  draft4.py  initial_draft.ipynb  nodes.py
backendcrew/: README.md  pyproject.toml
backendcrew/src/backendcrew/: crew.py  main.py
backendcrew/src/backendcrew/config/: agents.yaml  tasks.yaml
backendcrew/src/backendcrew/tools/: CalenderTool.py
reference/: graph.py
v1/: graph.py  nodes.py  state.py
